--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -20,6 +20,10 @@
         android:id="@+id/swipe_to_dismiss_switch_wrapper"
         layout="@layout/switch_label_layout" />
 
+    <include
+        android:id="@+id/arroussel_switch_wrapper"
+        layout="@layout/switch_label_layout" />
+
     <com.tiagosantos.enchantedviewpager.EnchantedViewPager
         android:id="@+id/homepage_card_view_pager"
         android:layout_width="match_parent"
